# circle-physics

./: .gitignore  ANIMATION_LAYER_INTEGRATION.md  ANIMATION_RECALCULATION_CHANGES.md  APP_REFACTORING_PLAN.md  ARCHITECTURE_VISUAL.md  BLACK_SCREEN_ESC_FIX.md  COMPILATION_STATUS.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_UI_AND_DRAWING_FIX.md  COMPREHENSIVE_FIX_PLAN.md  DRAWING_ACTUALLY_FIXED.md  DRAWING_REGISTRATION_FIX.md  DUPLICATION_FIX_PLAN.md  EXACT_FIXES_NEEDED.md  FEATURES_COMPLETE_SUMMARY.md  FINAL_PHASES4-5_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  ISSUES_FIXED.md  MANUAL_TAB_IMPLEMENTATION.md  MIGRATION_GUIDE.md  NEW_FEATURES_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_COMPLETE_SUMMARY.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE1_MIGRATION_SCRIPT.md  PHASE1_PROGRESS.md  PHASE1_STATUS.md  PHASE2_COMPLETE.md  PHASE2_FINAL_STATUS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASES3-6_IMPLEMENTATION_STATUS.md  PHASES3-6_PLAN.md  PHASES3-6_STATUS_FINAL.md  PHASES4-5-6_STATUS_FINAL.md  PHASES4-5_COMPLETE.md  (+49 more)
src/: APOLOGY_AND_EXPLANATION.md  App.tsx  INSTALLATION.txt  QUICK_START.md  README.md  README.txt  REFACTORING_GUIDE.md  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AnimationLayersPanel.tsx  index.tsx
src/contexts/: AnimationContext.tsx  ColorPaletteContext.tsx  DataContext.tsx  PhysicsContext.tsx  UIStateContext.tsx  index.tsx
src/features/: index.ts
src/hooks/: index.ts  (+3 more)
(+39 files in other folders)
