[package]
name = "circle-physics"
version = "0.1.0"
description = "Circle Physics Simulation"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-maximize", "window-unmaximize", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
